--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions
+name: Test pipeline
 
 on:
   push:
@@ -8,20 +8,7 @@ on:
     branches:
       - '*'
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10.12'
-
   test:
-    needs: [ build ]
     runs-on: ubuntu-latest
 
     services:
@@ -47,14 +34,16 @@ jobs:
         with:
           python-version: '3.10.12'
 
-      - name: Run Docker command
-        run: docker ps -a
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements.dev.txt
+
+      - name: Check Black formatting
+        run: black --check .
+
+      - name: Check Ruff linter
+        run: ruff check .
 
       - name: Run tests
         run: python manage.py test
